# OmitFS

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
gui/: package.json
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: lib.rs  main.rs
src/: config.rs  crypto.rs  db.rs  embedding.rs  fuse.rs  hasher.rs  main.rs  mcp.rs  ocr.rs  rag.rs  reranker.rs  server.rs  watcher.rs  whisper_transcribe.rs
