[package]
name = "omitfs"
version = "0.2.0"
edition = "2021"
description = "Zero-dependency semantic file system"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
shellexpand = "3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Error Handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config file (TOML)
toml = "0.8"

# Filesystem & Paths
dirs = "5"
notify = "6"

# Vector Database — pin compatible versions
lancedb = "0.5"
arrow-array = "49"
arrow-schema = "49"

# Unique IDs for chunk rows
uuid = { version = "1", features = ["v4"] }

# Document Parsing — text, PDF, Word, Excel/CSV
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = { version = "0.24", features = ["dates"] }

# AI / ML Embeddings — candle 0.6 is the latest stable
candle-core = "0.6"
candle-transformers = "0.6"
candle-nn = "0.6"
hf-hub = { version = "0.3", features = ["tokio"] }
tokenizers = { version = "0.19", default-features = false, features = ["onig"] }

# FUSE (Unix only — on Windows the mount command is cfg-gated)
[target.'cfg(unix)'.dependencies]
fuser = "0.14"
libc = "0.2"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"
