[package]
name = "omitfs"
version = "0.3.0"
edition = "2021"
description = "Zero-dependency local-first semantic file system"

[features]
default = []
cuda    = ["candle-core/cuda", "candle-transformers/cuda", "candle-nn/cuda"]
metal   = ["candle-core/metal", "candle-transformers/metal", "candle-nn/metal"]

[dependencies]
# CLI
clap        = { version = "4",   features = ["derive"] }
shellexpand = "3"

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender    = "0.2"

# Error handling
anyhow    = "1"
thiserror = "1"

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# Filesystem & paths
dirs   = "5"
notify = "6"

# Hashing (incremental indexing)
sha2 = "0.10"

# Encryption at rest (AES-256-GCM)
aes-gcm = "0.10"

# Vector database
lancedb      = "0.5"
arrow-array  = "49"
arrow-schema = "49"

# Unique IDs
uuid = { version = "1", features = ["v4"] }

# Document parsing
pdf-extract = "0.7"
docx-rs     = "0.4"
calamine    = { version = "0.24", features = ["dates"] }

# AI embeddings (candle 0.6)
candle-core         = "0.6"
candle-transformers = "0.6"
candle-nn           = "0.6"
hf-hub              = { version = "0.3", features = ["tokio"] }
tokenizers          = { version = "0.19", default-features = false, features = ["onig"] }

# HTTP client (RAG → Ollama)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"

# Web server (omitfs serve)
axum         = "0.7"
tower        = "0.4"
tower-http   = { version = "0.5", features = ["cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# FUSE (Unix only)
[target.'cfg(unix)'.dependencies]
fuser = "0.14"
libc  = "0.2"
