[package]
name    = "omitfs-gui"
version = "0.3.0"
edition = "2021"

[lib]
name       = "omitfs_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                       = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell          = "2"
tauri-plugin-global-shortcut = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio      = { version = "1", features = ["full"] }
